[gd_scene load_steps=11 format=3 uid="uid://b7myatyesp53n"]

[ext_resource type="Texture2D" uid="uid://c7sry65sh8qt2" path="res://Backgrounds/textbox.png" id="1_btotq"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_g7fni"]
[ext_resource type="Texture2D" uid="uid://b1xs7w20iwl5v" path="res://Roulette/Assets/MainMenu/settings_button_blowup.png" id="3_8g4ap"]
[ext_resource type="PackedScene" uid="uid://detmlnr7gd12c" path="res://Settings/settings_tab_container.tscn" id="3_wdvny"]
[ext_resource type="Texture2D" uid="uid://d4mo44vdoq8wn" path="res://Roulette/Assets/MainMenu/exit_button_blowup.png" id="4_edspg"]
[ext_resource type="Texture2D" uid="uid://lbq3oggr5awp" path="res://Roulette/Assets/MainMenu/menulogo_blowup.png" id="4_f45sc"]
[ext_resource type="Texture2D" uid="uid://ttwsfxqy58n1" path="res://Roulette/Assets/MainMenu/play_button_blowup.png" id="5_l4mo6"]
[ext_resource type="Texture2D" uid="uid://cqh8rvk7pn03y" path="res://Roulette/Assets/MainMenu/back_button_blowup.png" id="8_s7dxu"]

[sub_resource type="SystemFont" id="SystemFont_www3o"]
font_names = PackedStringArray("Comic Sans MS")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5v4aw"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_g7fni")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TempBackground" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(571.5, 331)
scale = Vector2(36.2188, 27.3125)
texture = ExtResource("1_btotq")

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = 4.0
offset_top = 1.0
offset_right = 1154.0
offset_bottom = 119.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_fonts/font = SubResource("SystemFont_www3o")
theme_override_font_sizes/font_size = 64
text = "Casino Simulator"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 1009.0
offset_top = 37.0
offset_right = 1209.0
offset_bottom = 625.0
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 25

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_8g4ap")

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_edspg")

[node name="GameButton" type="TextureButton" parent="."]
offset_left = 66.0
offset_top = 235.0
offset_right = 546.0
offset_bottom = 425.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("5_l4mo6")

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
custom_minimum_size = Vector2(0, 324)
offset_right = 1152.0
offset_bottom = 324.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 121
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BlackjackButton" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "Blackjack"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_5v4aw")

[node name="TexasButton" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "Texas Hold'em"

[node name="MarginContainer2" type="MarginContainer" parent="."]
visible = false
custom_minimum_size = Vector2(0, 324)
offset_left = 3.0
offset_top = 322.0
offset_right = 1152.0
offset_bottom = 646.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 121

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="RouletteButton" type="Button" parent="MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "Roulette"

[node name="HSeparator" type="HSeparator" parent="MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_5v4aw")

[node name="SlotsButton" type="Button" parent="MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "Slots
"

[node name="MarginContainer3" type="MarginContainer" parent="."]
visible = false
offset_left = 1.0
offset_right = 1151.0
offset_bottom = 655.0

[node name="Settings_Tab_Container" parent="MarginContainer3" instance=ExtResource("3_wdvny")]
layout_mode = 2

[node name="MenulogoBlowup" type="Sprite2D" parent="."]
position = Vector2(323, 112)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_f45sc")

[node name="MenulogoBlowup2" type="Sprite2D" parent="."]
visible = false
position = Vector2(578, 105)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_f45sc")

[node name="BackToMain" type="TextureButton" parent="."]
visible = false
offset_left = 3.0
offset_top = 2.0
offset_right = 203.0
offset_bottom = 192.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("8_s7dxu")

[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="GameButton" to="." method="_on_game_button_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/RouletteButton" to="." method="_on_roulette_button_pressed"]
[connection signal="pressed" from="BackToMain" to="." method="_on_back_to_main_pressed"]
